# di

./: .clang-tidy  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
cmake/: WarningsAsErrors.cmake
doc/concepts-driven-design-with-di/example/: GNUmakefile  static_polymorphism.cpp  type_erasure.cpp
doc/cppcon-2018/example/: GNUmakefile  cppcon_talk_2.cpp  cppcon_talk_5.cpp
example/: CMakeLists.txt  Doxyfile  GNUmakefile  example.cpp  model_view.cpp  model_view.hpp
example/modules/: controller.hpp  main.cpp  model.cpp  model.hpp  module_model.cpp  module_view.cpp  view.cpp  view.hpp
example/polymorphism/: concepts.cpp  function.cpp  inheritance.cpp  templates.cpp  type_erasure.cpp  variant.cpp
example/user_guide/: bind_cross_platform.cpp
extension/include/boost/di/extension/injections/: named_parameters.hpp
extension/include/boost/di/extension/policies/: serialize.hpp
extension/include/boost/di/extension/providers/: runtime_provider.hpp
extension/include/boost/di/extension/scopes/: scoped.hpp  shared.hpp
extension/test/: CMakeLists.txt
extension/test/injections/: shared_factory.cpp
include/boost/: di.hpp
include/boost/di/: fwd.hpp
include/boost/di/aux_/: type_traits.hpp
include/boost/di/concepts/: boundable.hpp  configurable.hpp  scopable.hpp
include/boost/di/core/: any_type.hpp  dependency.hpp  injector.hpp
include/boost/di/policies/: constructible.hpp
include/boost/di/scopes/: deduce.hpp  instance.hpp  singleton.hpp  unique.hpp
include/boost/di/wrappers/: unique.hpp
test/: CMakeLists.txt
test/common/: test.hpp  utils.hpp
test/common/fakes/: fake_injector.hpp
test/ft/: di_bind.cpp  di_config.cpp  di_errors.cpp  di_glibcxx_debug.cpp  di_injector.cpp
test/pt/: di_compile_time.cpp
test/ut/: bindings.cpp  config.cpp  injector.cpp  make_injector.cpp
test/ut/aux_/: preprocessor.cpp  type_traits.cpp  utility.cpp
test/ut/concepts/: boundable.cpp  callable.cpp  configurable.cpp  creatable.cpp  providable.cpp  scopable.cpp
test/ut/core/: any_type.cpp  array.cpp  binder.cpp  bindings.cpp  dependency.cpp  injector.cpp  policy.cpp  pool.cpp  provider.cpp  wrapper.cpp
test/ut/policies/: constructible.cpp
test/ut/providers/: stack_over_heap.cpp
test/ut/scopes/: deduce.cpp  instance.cpp  singleton.cpp  unique.cpp
test/ut/type_traits/: ctor_traits.cpp  memory_traits.cpp  named_traits.cpp  rebind_traits.cpp  scope_traits.cpp
test/ut/wrappers/: shared.cpp  unique.cpp
